--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.12.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
